2006-09-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/MethodDefinitionCollection.cs
	  Mono.Cecil/ConstructorCollection.cs
	  CodeGen/templates/IndexedCollection.cs:
		Fix the GetConstructor/GetMethod methods.
		Based on a patch by Jon Chambers.

2006-09-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Cil/ISymbolReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/ISymbolWriter.cs
	  Mono.Cecil.Cil/SymbolStoreHelper.cs:
		Working on the debug infos stuff.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Ensure custom attributes are read when they can be.
		Patch by Sebastien Pouliot.

2006-09-19  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/Document.cs
	  Mono.Cecil.Cil/Instruction.cs
	  Mono.Cecil.Cil/SequencePoint.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/IScopeProvider.cs
	  Mono.Cecil.Cil/ISymbolReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/ISymbolWriter.cs
	  Mono.Cecil.Cil/IVariableDefinitionProvider.cs
	  Mono.Cecil.Cil/SymbolStoreHelper.cs
	  Mono.Cecil.Cil/ISymbolStoreFactory.cs
	  Mono.Cecil.Cil/ScopeCollection.cs
	  Mono.Cecil.Cil/Scope.cs:
		Work on the architecture for debugging infos.

	* Mono.Cecil.dll.sources
	  Mono.Cecil.Cil/Document.cs
	  Mono.Cecil.Cil/IVariableDefinitionProvider.cs
	  Mono.Cecil.Cil/SequencePoint.cs
	  Mono.Cecil.Cil/ScopeCollection.cs
	  Mono.Cecil.Cil/BaseCodeVisitor.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/IScopeProvider.cs
	  Mono.Cecil.Cil/MethodBody.cs
	  Mono.Cecil.Cil/ICodeVisitor.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/Scope.cs
	  Mono.Cecil.Cil/VariableDefinitionCollection.cs
	  CodeGen/cecil.xml:
		First bits of the debug infos stuff.

	* Mono.Cecil.Cil/InstructionCollection.cs
	  CodeGen/templates/IndexedCollection.cs: